configfiles/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: eshwar333/todo-frontend:v6
        name: todo-frontend
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
 name: frontend
 labels:
  tier: frontend
spec:
 type: NodePort
 ports:
 - targetPort: 3000
   port: 3000
   nodePort: 30008
 selector:
  app: frontend
